Set up initial full-stack structure and .gitignore
- Make the .gitignore file more comprehensive -- covering:
Java/Spring Boot backend
React/TypeScript frontend
PostgreSQL database
General development tools
IDE files
OS-specific files
Deployment artifacts

- Add React TypeScript frontend with modal-based UI
- Add Spring Boot backend with REST API endpoints
- Add PostgreSQL database schema with sample data

- Current features: browsing book posts in homepage, popup window for details, floating button to create new post, image-centric design, 5-minute polling for automatic data refresh

- Most influential prompts to Github Copilot at this stage:
"This project community-book is a simple web app or users in a local community to post old books to give away or sell cheaply.
Details:
Frontend: React + TypeScript
Backend: Java + Spring Boot (REST API)
Database: PostgreSQL
Tools: Postman for API testing, GitHub for code, optional AWS for deployment.
Initialize the entire project structure for the first commit"
"Regarding user interface:
I want the home page to be the page where people can see and browse posts of books. User can see more details of a post by clicking into it, and a smaller pop-up window will appear on top of the grey out homepage. User can get back to the homepage by clicking into any place outside of the pop-up window. User can create a new post by clicking into a button in a corner of the homepage."

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,154 @@
-# Compiled class file
+# =====================================
+# COMMUNITY BOOK - MACOS GITIGNORE
+# =====================================
+
+# ========================================
+# JAVA / SPRING BOOT (BACKEND)
+# ========================================
+
+# Compiled files
 *.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
 *.jar
 *.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# Logs
+*.log
+logs/
+
+# Maven
+target/
+.mvn/wrapper/maven-wrapper.jar
+
+# Spring Boot
+*.pid
+application-*.properties
+!application-example.properties
+application-*.yml
+!application-example.yml
+
+# ========================================
+# REACT / TYPESCRIPT (FRONTEND)
+# ========================================
+
+# Dependencies
+node_modules/
+
+# Build outputs
+build/
+dist/
+.next/
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Test coverage
+coverage/
+
+# Cache
+.eslintcache
+.cache/
+
+# ========================================
+# DATABASE
+# ========================================
+
+# Database dumps
+*.sql
+*.dump
+*.backup
+
+# Local database data
+/database/data/
+/postgres-data/
+
+# ========================================
+# MACOS
+# ========================================
+
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+._*
+.Spotlight-V100
+.Trashes
+
+# ========================================
+# IDE FILES
+# ========================================
+
+# IntelliJ IDEA
+.idea/
+*.iml
+out/
+
+# Eclipse
+.project
+.classpath
+.settings/
+
+# VS Code
+.vscode/
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+
+# ========================================
+# SECURITY & SECRETS
+# ========================================
+
+# Environment files
+.env*
+!.env.example
+
+# API keys and secrets
+secrets.json
+*.pem
+*.key
+*.crt
+
+# ========================================
+# DEVELOPMENT TOOLS
+# ========================================
+
+# Postman
+*.postman_environment
+*.postman_collection
+
+# AWS
+.aws/
+aws-exports.js
+amplify/
+.amplifyrc
+amplify-meta.json
+amplify/#current-cloud-backend/
+*.zip
+deployment/
+
+# Terraform (if using Infrastructure as Code)
+*.tfstate
+*.tfstate.*
+.terraform/
+.terraform.lock.hcl
+
+# Docker
+Dockerfile.local
+docker-compose.override.yml
+
+# Temporary files
+*.tmp
+*.bak
+*~
+
+# Local configuration
+local.properties
+local-config.json
