--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,17 +1,18 @@
 # Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/communitybook_db
-spring.datasource.username=communitybook_user
-spring.datasource.password=change_this_password
+spring.datasource.username=autumn
+spring.datasource.password=themanor
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 # Server Configuration
-server.port=8080
+server.port=8080 
+# this means that our backend API will be accessible at http://localhost:8080 (whereas frontend is at :3000)
 
 # Application Configuration
 spring.application.name=community-book-backend
