test: add backend API integration tests & unit tests
- also update how database credentials were stored in backend for better security

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,10 @@ application-*.properties
 application-*.yml
 !application-example.yml
 
+# Environment variables
+.env
+backend/.env
+
 # ========================================
 # REACT / TYPESCRIPT (FRONTEND)
 # ========================================
