--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/communitybook_db
-spring.datasource.username=autumn
-spring.datasource.password=themanor
+spring.datasource.url=jdbc:postgresql://localhost:5432/${DB_NAME:communitybook_db}
+spring.datasource.username=${DB_USER:autumn}
+spring.datasource.password=${DB_PASSWORD:}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
