--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,9 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage"
+  "test:coverage": "vitest --coverage",
+  "test:e2e": "playwright test",
+  "postinstall": "npx playwright install"
   },
   "dependencies": {
     "heic2any": "^0.0.4",
@@ -17,6 +19,7 @@
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.44.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
