--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 # Database Configuration
+# Load the .env file to set DB_USER, DB_PASSWORD, DB_NAME as environment variables
+spring.config.import=optional:file:.env[.properties]
 spring.datasource.url=jdbc:postgresql://localhost:5432/${DB_NAME:communitybook_db}
 spring.datasource.username=${DB_USER:autumn}
 spring.datasource.password=${DB_PASSWORD:}
