feat: dockerize backend service
- solved the issues with buildx by systematically check each dependent and symlink a binary to a plugin directory
- solved colima corruption issues partly by freeing up machine's disk space
- solved issue of docker container always exiting immediately through many steps:
+ 1) I found the error message thru docker logs; I checked database status, I ran backend locally to see if it could connect to database; then from explaining to ChatGPT it helped me trace to one part of the problem: the keyword localhost in my application.properties will refer to the container, not my actual localhost, when I do docker run. So I can either change localhost to host-docker-internal do that the docker run would work, or a better solution: change that line to spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:5432/${DB_NAME:communitybook_db}
+ 2) allow connection from outside localhost (i.e. from the Docker container of the backend instead of the local backend):
- psql postgres, then SHOW config_file, then copy the path, then nano /opt/homebrew/var/postgresql@16/postgresql.conf, then change listen_addresses from “localhost” to “*”.
-  nano /opt/homebrew/var/postgresql@16/pg_hba.conf then add host    all             all             0.0.0.0/0           md5 to the list at the end of the file.
3) ensure database credentials are correct in environment variables -- one option is to set them explicitly in docker run command.

- add documentation for the dockerizing process

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-# Database Configuration
-# Load the .env file to set DB_USER, DB_PASSWORD, DB_NAME as environment variables
+# Import local .env for dev (ignored in production if no .env file exists)
 spring.config.import=optional:file:.env[.properties]
-spring.datasource.url=jdbc:postgresql://localhost:5432/${DB_NAME:communitybook_db}
-spring.datasource.username=${DB_USER:autumn}
-spring.datasource.password=${DB_PASSWORD:}
+
+# Database Configuration
+# Prefer SPRING_DATASOURCE_URL (Render/Postgres), fallback to localhost for dev
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:5432/${DB_NAME:communitybook_db}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:${DB_USER:}}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:${DB_PASSWORD:}}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
@@ -25,7 +27,7 @@ spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=2
 
 # Server Configuration
-server.port=8080 
+server.port=${PORT:8080}
 # this means that our backend API will be accessible at http://localhost:8080 (whereas frontend is at :3000)
 
 # Application Configuration
