--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,11 +2,11 @@
 # Copy this file to .env and update with your actual values
 
 # API Base URL (Spring Boot backend)
-REACT_APP_API_URL=http://localhost:8080/api
+VITE_API_URL=http://localhost:8080/api
 
 # Application Settings
-REACT_APP_APP_NAME=Community Book Exchange
-REACT_APP_VERSION=0.1.0
+VITE_APP_NAME=Community Book Exchange
+VITE_VERSION=0.1.0
 
 # Optional: Analytics or other service keys
 # REACT_APP_GOOGLE_ANALYTICS_ID=your-ga-id
