fix: CORS & VITE_API_URL for deployed front-backend connection

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -3,6 +3,7 @@
 
 # API Base URL (Spring Boot backend)
 VITE_API_URL=http://localhost:8080/api
+# add VITE_API_URL=https://comm-book-2.onrender.com/api in Vercel Project Evnvironment Variables for deployment 
 
 # Application Settings
 VITE_APP_NAME=Community Book Exchange
